--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,10 +25,16 @@ h1
     text-align: -webkit-center;
 }
 
+th
+{
+    border: 2px solid black;
+    background-color: coral;
+}
+
 .buttons1
 {
     grid-column: 5 / 7;
-    grid-row: 4 / 8;
+    grid-row: 5 / 9;
     background: #ffc73b;
     text-align: -webkit-center;
 }
@@ -39,6 +45,14 @@ h1
     font-family: "Berlin Sans FB", serif;
     font-size: x-large;
     background-color: #ffac00;
+}
+
+.pizzamenu
+{
+    grid-column: 5 / 7;
+    grid-row: 5 / 10;
+    background: #ffc73b;
+    text-align: -webkit-center;
 }
 
 .img1
