--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,14 +7,17 @@ body
     background-color: goldenrod;
     margin: 2%;
     display:grid;
-    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+}
+
+table
+{
+    display: flex;
 }
 
 header
 {
     background-color: coral;
-    grid-column: 1 / 11;
+    grid-column: 1 / 15;
     grid-row: 1 / 3;
 }
 
@@ -33,9 +36,16 @@ th
 
 .buttons1
 {
-    grid-column: 5 / 7;
-    grid-row: 5 / 9;
+    grid-column: 3 / 7;
+    grid-row: 5 / 6;
     background: #ffc73b;
+    text-align: -webkit-center;
+}
+
+.pizzamenu
+{
+    display: flex;
+    background-color: #ffc73b;
     text-align: -webkit-center;
 }
 
@@ -47,22 +57,39 @@ th
     background-color: #ffac00;
 }
 
-.pizzamenu
+.buttons2:hover
 {
-    grid-column: 5 / 7;
-    grid-row: 5 / 10;
-    background: #ffc73b;
-    text-align: -webkit-center;
+    color: white;
+    display: flex;
+    font-family: "Berlin Sans FB", serif;
+    font-size: x-large;
+    background-color: #ffac00;
 }
 
-.img1
+.ingredientbutton
 {
-    grid-column: 3 / 5;
-    grid-row: 10 / 12;
+    background-color: #ff3f3f;
+    color: black;
 }
 
-.img2
+.ingredientbutton:hover
 {
-    grid-column: 7 / 9;
-    grid-row: 10 / 12;
+    color: white;
+}
+
+.bestelbutton
+{
+    background-color: steelblue;
+    color: black;
+}
+
+.bestelbutton:hover
+{
+    color: white;
+}
+
+img
+{
+    width: 250px;
+    height: 200px;
 }
