--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -33,15 +33,16 @@ h1
 
 .pizzamenu
 {
-    grid-column: 1 / 2;
+    grid-column: 1 / 5;
     display: flex;
+    justify-content: space-evenly;
     background-color: #ffc73b;
     text-align: -webkit-center;
 }
 
 .bestelmenu
 {
-    grid-column: 10 / 15;
+    grid-column: 9 / 15;
     display: flex;
     flex-direction: column;
     background-color: #ffc73b;
