--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,14 +6,13 @@ body
 {
     background-color: goldenrod;
     margin: 2%;
-    display:grid;
+    display: flex;
+    flex-direction: column;
 }
 
 header
 {
     background-color: coral;
-    grid-column: 1 / 15;
-    grid-row: 1 / 3;
 }
 
 h1
@@ -25,29 +24,44 @@ h1
 
 .buttons1
 {
-    grid-column: 3 / 7;
-    grid-row: 5 / 6;
     background: #ffc73b;
     text-align: -webkit-center;
 }
 
 .pizzamenu
 {
-    grid-column: 1 / 5;
+    width: 70%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     background-color: #ffc73b;
     text-align: -webkit-center;
+    flex-wrap: wrap;
+}
+
+.pizzamenuitem
+{
+    margin: 20px;
+    width: 29%;
+    display: flex;
+    flex-direction: column;
 }
 
 .bestelmenu
 {
-    grid-column: 9 / 15;
+    width: 25%;
     display: flex;
     flex-direction: column;
     background-color: #ffc73b;
     text-align: -webkit-center;
 }
+
+.bestelmenuitem
+{
+    display: flex;
+    justify-content: space-around;
+    border: 2px solid black
+}
+
 
 .buttons2
 {
