--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -56,9 +56,9 @@ h1
 
 .bestelmenu
 {
-    width: 25%;
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     background-color: #ffc73b;
     text-align: -webkit-center;
 }
@@ -67,6 +67,26 @@ h1
 {
     display: flex;
     justify-content: space-around;
+}
+
+.wagenmenu
+{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffc73b;
+    text-align: -webkit-center;
+}
+
+.wagenitem
+{
+    display: flex;
+    justify-content: space-around;
+}
+
+.wagenitemitem
+{
+    vertical-align: middle;
     border: 2px solid black
 }
 
@@ -85,11 +105,40 @@ h1
 
 .ingredientbutton
 {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 2%;
     background-color: #ff3f3f;
     color: black;
 }
 
-.ingredientbutton:hover
+.accordion
+{
+    background-color: #ffc73b;
+    padding: 5%;
+    width: 100%;
+    transition: 0.4s;
+}
+
+.active, .accordion:hover
+{
+    background-color: #ffac00;
+}
+
+.panel
+{
+    padding: 5%;
+    background-color: #ffc73b;
+    overflow: hidden;
+}
+
+.bezorgbutton
+{
+    background-color: #ff3f3f;
+    color: black;
+}
+
+.bezorgbutton:hover
 {
     color: white;
 }
