--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -57,8 +57,8 @@ h1
 .bestelmenu
 {
     width: 100%;
-    /* display: flex; */
-    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
     background-color: #ffc73b;
     text-align: -webkit-center;
 }
